trimmed SCSS. Fixed Hero gaps. Added Hero responsiveness

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -1,9 +1,14 @@
 @import '../../src/theme/mixins.scss';
 
-div.profile-card {
+div#profile-card {
   @include flex(row);
-  // flex-wrap: wrap;
-  // place-content: center;
+  place-content: center;
+  place-items: center;
+
+  div#profile-card-detail {
+    @include flex(column);
+    max-width: 100%;
+  }
 
   span#down-under {
     display: inline-block;
@@ -18,5 +23,30 @@ div.profile-card {
 
   svg#favourite-icon {
     position: absolute;
+  }
+}
+
+$svgSize: 32px;
+
+ul#my-tools {
+  @include flex(row);
+  padding: 0;
+
+  li.MuiListItem-root {
+    padding: 0;
+    width: auto;
+
+    img {
+      max-width: $svgSize;
+      max-height: $svgSize;
+    }
+  }
+
+  ul#more-tools {
+    flex-direction: row;
+
+    img#jquery-fix-width {
+      max-width: 84px;
+    }
   }
 }
